# btrshot

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  btrshot-restore.sh  btrshot.conf.example  btrshot.service  btrshot.sh  btrshot.timer  flake.nix  module.nix  package.nix  task.md  tasks.md
.claude/: settings.json
src/: cmd.rs  config.rs  main.rs  snapshot.rs  state.rs  validation.rs
src/backup/: full.rs  incremental.rs  mod.rs  s3.rs
test/: Dockerfile  conftest.py  docker-compose.yml  entrypoint.sh  helpers.sh  integration.nix  nspawn-rootfs.nix  run-suite.sh  run.sh  test_btrshot.py  test_cases.sh  vm-entrypoint.sh  vm.nix
