[package]
name = "btrshot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btrshot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sd-notify = "0.4"
anyhow = "1"
